--- a/homeworks/01-bubble-sort/src/App.css
+++ b/homeworks/01-bubble-sort/src/App.css
@@ -5,11 +5,12 @@
 .game {
   position: relative;
   display: flex;
+  flex-direction: column;
   margin: 0 auto;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
   width: 600px;
   height: 400px;
-  background-color: #fffff0;
   text-align: center;
 
 }
@@ -25,4 +26,17 @@
   display: flex;
   align-items: flex-end;
   bottom: 35px;
+}
+
+.buttonContainer {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  width: 30%;
+  justify-content: space-between;
+}
+
+.status {
+  position: absolute;
+  bottom: -25px;
 }
